k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: python-service
spec:
  type: NodePort
  selector:
    app: python
  ports:
  - port: 80
    targetPort: 5000
    nodePort: 30007
